# RustTorch

./: README.md
alphazero/: .gitignore  Cargo.toml  \
alphazero/assets/: bishop_moves.txt  knight_moves.txt  map_gen.py  rook_moves.txt
alphazero/src/: chess_game.rs  configs.rs  connect4.rs  game.rs  game_torch.rs  main.rs  mcts.rs  move_map.rs  networks.rs  play_games.rs  replay_buffer.rs  resnet.rs  runner.rs
mlp/: Cargo.toml
mlp/src/: lib.rs  main.rs
resnet/: Cargo.toml
resnet/src/: main.rs  resnet.rs  runner.rs
