[package]
name = "alphazero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = {version = "~0.10.1"}
#anyhow = "~1.0.40"
rand = "~0.8.3"
chess = "3.2.0"
rayon = "~1.7.0"
progress_bar = "~1.0.3"

[profile.release]
lto = "fat" 
codegen-units = 1
opt-level = 3
